--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <div class="column large">
 
       <div class="">
-        <div class="">
-          <p>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</p>
+        <div class="image main-story">
+          <span>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</span>
         </div>
         <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien
           massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus,
@@ -42,16 +42,16 @@
       <div class="">
         <h2>Orca Spends Vacation at Land World Puget</h2>
         <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
-        <div class="">
-          <p>Earth Spins Backwards for 2017</p>
+        <div class="image story2">
+          <span>Earth Spins Backwards for 2017</span>
         </div>
       </div>
 
       <div class="">
         <h2>Burger for Breakfast: How Early is too Early?</h2>
         <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
-        <div class="">
-          <p>Research Shows Cameras Erase Memory</p>
+        <div class="image story3">
+          <span>Research Shows Cameras Erase Memory</span>
         </div>
       </div>
 
@@ -65,8 +65,8 @@
       </div>
 
       <div class="">
-        <div class="">
-          Cats in Control-Is It a Thing?
+        <div class="image story1">
+          <span>Cats in Control-Is It a Thing?</span>
         </div>
         <p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.</p>
       </div>
@@ -76,7 +76,7 @@
       <img src="resources\images\img-news-bite.png" alt="Cookie">
       <div class="">
         <h3>NEWS BITES</h3>
-        <p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can</p>
+        <span>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can</span>
       </div>
     </div>
   </main>
