--- a/index.html
+++ b/index.html
@@ -39,23 +39,31 @@
           sit amet fringilla massa.</p>
       </div>
 
-      <div class="">
-        <h2>Orca Spends Vacation at Land World Puget</h2>
-        <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
-        <div class="image story2">
-          <span>Earth Spins Backwards for 2017</span>
-        </div>
-      </div>
+      <div class="stories">
 
-      <div class="">
-        <h2>Burger for Breakfast: How Early is too Early?</h2>
-        <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
-        <div class="image story3">
-          <span>Research Shows Cameras Erase Memory</span>
+        <div class="story">
+          <div class="text-story">
+            <h2>Orca Spends Vacation at Land World Puget</h2>
+            <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
+          </div>
+          <div class="image story2">
+            <span>Earth Spins Backwards for 2017</span>
+          </div>
         </div>
-      </div>
+
+
+        <div class="story">
+          <div class="text-story">
+            <h2>Burger for Breakfast: How Early is too Early?</h2>
+            <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
+          </div>
+          <div class="image story3">
+            <span>Research Shows Cameras Erase Memory</span>
+          </div>
+        </div>
 
     </div>
+  </div>
 
     <div class="column medium">
 
@@ -74,9 +82,14 @@
 
     <div class="column small">
       <img src="resources\images\img-news-bite.png" alt="Cookie">
-      <div class="">
+      <div class="bites">
         <h3>NEWS BITES</h3>
-        <span>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can</span>
+        <span>Cat Emoji Goes Viral</span>
+        <span>Buy Youtube Views</span>
+        <span>Home Business Advertising Ideas</span>
+        <span>Advertising Internet Online</span>
+        <span>Illustration in Marketing Materials</span>
+        <span>Finally a Top Secret Way You Can</span>
       </div>
     </div>
   </main>
