--- a/index.html
+++ b/index.html
@@ -93,6 +93,19 @@
       </div>
     </div>
   </main>
+
+  <footer>
+    <div class="info">
+      <span class="title">MY Times</span>
+      <nav>
+        <span><a href="#">World</a> </span>
+        <span><a href="#">U.S.</a> </span>
+        <span><a href="#">Tech</a> </span>
+        <span><a href="#">Science </a> </span>
+      </nav>
+    </div>
+  <p>© 2016, My Times (A Division of Codecademy bite)</p>
+  </footer>
 </body>
 
 </html>
